--- a/css/payment.css
+++ b/css/payment.css
@@ -16,6 +16,10 @@ a:hover{
 div{
 	margin-top : 1em;
 }
+.upper_container{
+	display: flex;
+	flex-direction : row;
+}
 .payment_container{
 	display : flex;
 	flex-direction : column;
@@ -23,7 +27,7 @@ div{
 	width : fit-content;
 	border : 2px solid black;
 	padding : 3em;
-	margin-left :15vw;
+	margin-left :12vw;
 	margin-bottom : 2em;
 }
 .options{
@@ -71,5 +75,68 @@ div{
 .monthly_special{
 	display  :flex;
 	flex-direction : column;
+	
+}
+.privileges{
+	padding : 3em;
+	display : flex;
+	flex-direction : column;
+	justify-content : flex-start;
+	align-items : flex-start;
+}
+h3{
+	display : flex;
+	justify-content : flex-start;
+}
+.privileges_options{
+	display : flex;
+	flex-direction : row;
+	justify-content : space-between;
+	
+}
+.image_text{
+	display : flex;
+	flex-direction : column;
+	background :  #bbc1ec;
+	width : fit-content;
+	justify-content: center;
+	align-items : center;
+	padding : 2em;
+}
+.options_text{
+font-size : 1.5em;margin-top : 2em; margin-left : 2em;width : 30vw;height : 10vh;
+}
+@media(max-width : 410px){
+	.upper_container{
+		display : flex;
+		flex-direction : column;
+	}
+	.payment_container{
+		width : 100%;
+		margin-left : 0;
+		margin-right : 1em;
+		margin-top : 1em;
+	}
+	.card{
+		width : 90%;
+		
+	}
+	
+	.privileges{
+		width : 100%;
+		margin-left : -1em;
+	}
+	.special {
+		width : 80%;
+	}
+	.image_text{
+		padding : 1vw;
+	}
+	.image_text img{
+		width : -10em;
+	}
+	.options_text{
+		font-size : 1em;
+	}
 	
 }
