--- a/css/landing.css
+++ b/css/landing.css
@@ -32,10 +32,11 @@
    padding: 12%;
 }
 
+
 .half-circle p {
    color: #2B2C34;
 }
-.half-circle button,.btn{
+.half-circle button, .extra{
                     background: #B8C1EC;
                     padding: 1rem 2rem;
                     border: none;
