--- a/css/landing.css
+++ b/css/landing.css
@@ -1,7 +1,7 @@
 *{
-    margin:0%;
+    /* margin:0%; */
     padding: 0%;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
         }
 /* SECTION-1 */
 
@@ -20,7 +20,7 @@
 }
 .half-circle{
    width:100%;
-   height: 100%;
+   height: 70%;
    border-radius:0% 0% 100% 0% ;
    background: #E5E5E5;
    color: #232946;
